@@ -486,6 +486,7 @@ CmdParms=OBC1:8=0, OBC2:8=0
 CmdTranslator=BandOtranslator(2)
 FixedData=01 80 00
 DefaultCmd=00 00
+
 Code.S3C80=07 07 32 8B 15 00 00 6C 05 95 00 6C 0B AB 00 6C 11 C1 00 6C 17 D7 00 6C 1D EA B0 C6 F6 FF 7E F6 FF 7E 1C 22 F6 01 4C B0 C3 48 03 58 04 F6 FF 66 58 05 F6 FF 64 58 06 F6 FF 64 F6 FF 7A 37 61 0F F6 FF 7A 3C 0E 1C 20 F6 01 6D 3A F9 E4 07 06 76 07 40 6B 0F F6 01 0A FB 04 77 61 8B BF 37 60 03 F6 FF 7A AF 4C 08 1C 16 90 C5 FB 08 1C 12 60 C3 EB 02 1C 1A F6 01 4C 4A ED AF 1C 1E 8B 02 1C 12 8D 01 4C
 Code.HCS08=20 18 04 05 32 00 00 6B 05 A9 00 6B 0B BF 00 6B 11 D5 00 6B 17 EB 00 6B 1D FE 3F 56 AD 5B AD 59 AE 7A AD 57 3F 53 4E 60 54 B6 61 AD 32 B6 62 AD 2B B6 63 AD 27 AD 3E 00 56 10 AD 39 6E 0E 53 AE 78 CD FF 83 3B 53 F8 4E 64 63 0D 64 0E CD FF 92 24 04 10 56 20 C6 01 56 02 AD 1A 81 6E 08 54 B7 55 AE 6E 39 55 24 08 AE 6A 33 53 26 02 AE 72 AD 0A 3B 54 ED 81 AE 76 20 02 AE 6A CC FF 65																			
 Code.MAXQ610=05 06 32 a2 00 90 64 00 3a 05 64 00 d9 0a 58 4b 01 00 64 00 3a 05 64 00 3a 05 64 00 b2 1b 00 00 64 00 16 16 64 00 78 10 02 41 40 01 5f c3 0c 00 40 58 10 df 00 00 5a 02 00 00 00 da d1 00 59 14 00 00 00 da d2 00 59 14 00 00 00 da d3 00 57 0c 00 00 00 c4 d0 00 57 08 00 00 10 c4 00 08 56 1c da 80 17 df df 01 56 0c df 01 5a 00 00 00 57 10 00 00 5a 70 00 06 57 08 00 00 5a 01 00 00 11 da da 01 58 dc c4 00 5d 00 00 00 00 c3 0c 40 40 04 59 a8 00 00 82 10 00 14 00 d3 d4 00 59 A0 00 00 5a 03 00 00 5b f8 54 00 5a 00 00 00 
@@ -2310,7 +2311,7 @@ Code.TI2541=01 15 01 21 21 96 00 05 06 00 0A 00 06 00 10 00 06 00 16 00 06 00 1C
 
 [Nokia32]
 PID=01 73
-Variant=1
+VariantName=1
 DevParms=Device,Sub Device,X,High X-bit:Constant|Toggle|Release
 DeviceTranslator=Translator(3,8,0) Translator(0,8,8) Translator(1,8,16) Translator(2,8,24)
 FixedData=00 00 00 00
@@ -2323,7 +2324,7 @@ Code.MAXQ610=35 6f 41 96 00 05 06 00 0a 00 06 00 10 00 06 00 16 00 06 00 1c 00 b
 
 [Nokia32 Two LO]
 PID=01 73
-Variant=3
+VariantName=3
 DevParms=Device,Sub Device,X,High X-bit:Constant|Toggle|Release,Short lead-out:bool
 DeviceTranslator=Translator(4,1,5) Translator(3,2,6) Translator(0,8,8) Translator(1,8,16) Translator(2,8,24)
 FixedData=00 00 00 00
@@ -3186,6 +3187,7 @@ For double-style signals, the prefix device number must be entered in Device 0. 
 The main device number must be entered in DevP2 
 Code.S3C80=40 84 62 8B 14 A5 54 08 08 01 12 00 F0 01 12 03 02 32 B4 10 B0 08 39 00 02 08 0A C0 C0 56 C0 0B 7B 0B 87 10 03 19 03 46 29 01 8D 01 46 87 10 04 19 04 56 29 EF 0C 03 A6 0D 02 EB 02 0C 05 09 0D B0 01 E6 10 01 F6 FF 56 FB 06 F6 FF 50 7B F1 AF E6 01 05 E6 10 06 F6 01 46 8D 01 0A
 Code.HCS08=20 17 21 43 62 A5 54 08 08 01 11 01 04 01 11 03 16 32 C8 10 AF 08 4D 00 02 8C B6 67 44 A4 03 97 00 67 09 E6 60 B7 60 10 A3 CC FF 5F E6 61 B7 61 19 A3 B6 B2 A1 02 27 03 6E 01 B2 3F AC 6E 01 A9 AD E7 6E 05 AC 6E 06 A9 AD DF CD FF 92 25 EC 81																
+
 [Pioneer MIX]
 PID=00 7E
 VariantName=5
